--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+    <!--characters-->
+    <!--props-->
+    <!--environment-->
+    <img id="layer1" src="../img/layer1.png">
+    <img id="layer2" src="../img/layer2.png">
+    <img id="layer3" src="../img/layer3.png">
+    <img id="layer4" src="../img/layer4.png">
+
     <script type="module" src="./index.js"></script>
 </body>
 </html>
