--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+
     <!--characters-->
+    <img id="player" src="../img/player.png">
+
     <!--props-->
+
+
     <!--environment-->
     <img id="layer1" src="../img/layer1.png">
     <img id="layer2" src="../img/layer2.png">
